--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
 # Environment Variables
 # MONGODB_URI=mongodb://localhost:27017/flowchain_ai
-MONGODB_URI=mongodb+srv://admin:admin@flowchain.fjtuyrk.mongodb.net/?appName=Flowchain
+MONGODB_URI=Mongo_URL
 
 # For production, use a cloud MongoDB URI like:
 # MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/flowchain_ai
 
 # Get your Gemini API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=AIzaSyAVfX6AZxffcD399F8rqDlfIVp3yytlg2I
+GEMINI_API_KEY=Gemini_API
